app/assets/stylesheets/chat.css
.chat-page {
  display: flex;
  height: 100vh;
  width: 100vw;
}

.chat-sidebar {
  flex: 2;
  background-color: #3F0E40;
  display: flex;
}

.workspaces-sidebar {
  background-color: #2b002c;
  flex: 1;
  display: flex;
  flex-direction: column;
  padding: 1rem 0.5rem;
  max-width: 3.25rem;
}

.workspaces-icon {
  margin-bottom: 0.75rem;
  position: relative;
}

.workspaces-icon>.tooltip-container {
  display: none;
  width: max-content;
  position: absolute;
  top: 0.5rem;
  left: 4rem;
  padding: 0.5rem;
  border: 1px solid black;
  border-radius: 0.5rem;
  background-color: black;
  color: white;
  font-weight: 600;
  font-size: 0.925rem;
  z-index: 10;
}

.workspaces-icon:hover>.tooltip-container {
  display: block;
}

.workspaces-icon>.tooltip-container:hover { 
  display: none;
}

.workspaces-icon>.tooltip-container>.tooltip-tail {
  position: absolute;
  left: -1.25rem;
  border: 10px solid;
  border-color: transparent black transparent transparent;
}

.workspaces-icon>.tooltip-container>.tooltip-content {
  position: relative;
}

.workspaces-icon > img {
  padding: 0.125rem;
  width: 2rem;
  border-radius: 1rem;
  border: 3px solid rgba(0,0,0,0);
  cursor: pointer;
}

.workspaces-icon>img:hover {
  border: 3px solid rgba(255,255,255,0.5);
}

.workspaces-sidebar:last-child {
  margin: 0;
}

.workspaces-icon > .workspaces-sidebar-active {
  border: 3px solid white;
}

.workspaces-icon > .workspaces-sidebar-active:hover {
  border: 3px solid white;
  border-radius: 1rem;
}

.main-sidebar {
  flex: 3;
}

.sidebar-detail {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0;
  color: rgb(207,195,207);
}

.sidebar-detail > * {
  padding: 0.5rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.sidebar-detail>*>h2 {
  font-size: 1.15rem;
}

.sidebar-detail>*>h3, .sidebar-detail>*>*>h3 {
  font-size: 0.925rem;
}

.sidebar-detail>*>span {
  font-size: 0.85rem;
}

.sidebar-header {
  position: relative;
}

.sidebar-header:hover {
  background-color: #350d36;
}

.sidebar-header>span {
  padding: 0.5rem;
  display: flex;
  align-items: center;
}

.sidebar-header>span>img {
  width: 0.5rem;
  height: 0.5rem;
  margin-right: 0.4rem;
}

.sidebar-header:hover>span {
  color: white;
}

.sidebar-header>h2 {
  color: #fff;
  cursor: pointer;
  font-weight: 900;
  display: flex;
  position: relative;
  padding-right: 1rem;
}

#header-dropdown-icon {
  border: 5px solid;
  border-color: white transparent transparent transparent;
  position: absolute;
  right: 0;
  top: 11px;
}

#header-dropdown-icon-hider {
  border: 3.25px solid;
  border-color: rgb(63, 14, 64) transparent transparent transparent;
  position: absolute;
  right: 1.75px;
  top: 11px;
}

.sidebar-dropdown {
  position: absolute;
  background-color: #f8f8f8;
  z-index: 10;
  padding: 1.5rem 0;
  border-radius: 8px;
  left: -30px;
  border: 1px solid rgba(28,29,28,0.3);
  color: rgb(28,29,28);
}

.sidebar-dropdown a {
  color: rgb(28,29,28);
  text-decoration: none;
}

.sidebar-dropdown a:visited {
  color: rgb(28, 29, 28);
  text-decoration: none;
}

.sidebar-dropdown>*>*:not(:first-child), #user-actions>* {
  margin-left: -1.5rem;
  margin-right: -1.5rem;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
}

.sidebar-dropdown>*>*:not(:first-child):hover {
  background-color: rgb(18,100,163);
  color: white;
}

#user-actions>*:hover {
  background-color: rgb(18,100,163);
  color: white;
}

.sidebar-dropdown>* {
  padding: 0 1.5rem 1rem 1.5rem;
  border-bottom: 1px solid rgba(var(--sk_foreground_low,29,28,29),.13);
}

.sidebar-dropdown>*:first-child {
  padding-top: 0;
}

.sidebar-dropdown>*:last-child {
  border-bottom: 0;
  padding-bottom: 0;
}

.sidebar-dropdown>* {
  padding-top: 1rem;
}

#user-info>*, #workspace-info>* {
  display: flex;
  flex-direction: column;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

#user-info-header, #workspace-info-header {
  display: flex;
  flex-direction: row;
  align-self: flex-start;
  align-items: center;
}

#user-info-header>img, #workspace-info-header>img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 1rem;
}

#user-actions {
  display: flex;
  flex-direction: column;
}

.sidebar-threads {
  cursor: pointer;
  display: flex;
  align-items: center;
}

.sidebar-threads:hover {
  background-color: #350d36;
}

.sidebar-threads>img {
  width: 1rem;
  height: 0.9rem;
  margin-right: 0.5rem;
}

.channels-tooltip-container {
  z-index: 100;
  display: none;
  position: absolute;
}

#channels-tooltip {
  position: absolute;
  bottom: 26px;
  left: 5px;
  width: max-content;
  background-color: black;
  border: 1px solid black;
  border-radius: 8px;
  padding: 0.5rem;
  font-size: 0.85rem;
  color: white;
}

#channels-tooltip-tail {
  position: absolute;
  bottom: 13px;
  left: 25px;
  border: 7px solid;
  border-color: black transparent transparent transparent;
}

#channels-list {
  display: flex;
  flex-direction: column;
}

#channels-list>* {
  cursor: pointer;
  padding: 0.5rem 1rem;
  margin-top: 0.25rem;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

#channels-list>*:last-child {
  margin-top: 0.5rem;
}

#channels-list>*:hover {
  background-color: #350d36;
}

#channels-list>*:first-child:hover {
  background-color: #3F0E40;
}

#channels-list-header>h3:hover>.channels-tooltip-container {
  display: block;
}

#channels-list h3 .channels-tooltip-container:hover {
  display: none;
}

#channels-list-header .plus-sign>.channels-tooltip-container {
  left: -24px;
}

#channels-list-header {
  display: flex;
  justify-content: space-between;
  margin: 0;
  margin-bottom: 0.25rem;
  padding: 0;
}

#channels-list-header>h3 {
  cursor: pointer;
  position: relative;
}

#channels-list>span {
  display: flex;
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
  margin-top: 0;
  font-size: 0.9rem;
}

#channels-list>span>div {
  margin-left: 0.5rem;
}

.direct-messages-list {

}

#direct-messages-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.plus-sign {
  border: 1.25px solid;
  border-radius: 3rem;
  padding-left: 4.176px;
  padding-right: 4.176px;
  margin-right: 0.25rem;
  font-size: 0.7rem;
  cursor: pointer;
}

#direct-messages-header>h3 {
  position: relative;
  cursor: pointer;
}

#direct-messages-header>h3:first-of-type {
  margin-right: 0.5rem;
}

#direct-messages-header>h3:hover>#dms-tooltip-container {
  display: block;
}

#direct-messages-header>h3>#dms-tooltip-container:hover {
  display: none;
}

#dms-tooltip-container {
  display: none;
}

#dms-tooltip {
  position: absolute;
  bottom: 26px;
  left: 5px;
  width: max-content;
  background-color: black;
  border: 1px solid black;
  border-radius: 8px;
  padding: 0.5rem;
  font-size: 0.85rem;
  color: white;
}

#dms-tooltip-tail {
  position: absolute;
  bottom: 13px;
  left: 45px;
  border: 7px solid;
  border-color: black transparent transparent transparent;
}

.plus-sign #dms-tooltip {
  left: -75px;
}

.plus-sign #dms-tooltip-tail {
  left: 1.5px
}

.channel-content {
  flex: 5;
  display: flex;
  flex-direction: column;
}

.thread-content {
  display: none;
  flex: 5;
}

